S3 data class and functions added for timefitteR_Params_List

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ export("%>%")
 export(cohen_f2)
 export(generate_data_set)
 export(generate_timedata_sequence)
+export(timefitteR_Param_List)
 importFrom(magrittr,"%>%")
 importFrom(tibble,tibble)
