--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,11 @@ Imports:
     stats
 URL: https://github.com/DrJPK/timefitteR
 BugReports: https://github.com/DrJPK/timefitteR/issues
+Collate: 
+    'TimefitteR_Params_List.R'
+    'cohen_f2.R'
+    'fix_param.R'
+    'generate_attitude_sequence.R'
+    'generate_data_set.R'
+    'generate_timedata_sequence.R'
+    'utils-pipe.R'
