--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(cohen_f2)
 export(generate_data_set)
 export(generate_timedata_sequence)
+export(is.timefitteR_Param_List)
 export(timefitteR_Param_List)
 importFrom(magrittr,"%>%")
 importFrom(tibble,tibble)
