--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(cohen_f2)
 export(generate_data_set)
 export(generate_timedata_sequence)
 export(is.timefitteR_Param_List)
+export(new_timefitteR_Data_Model)
 export(timefitteR_Param_List)
 importFrom(magrittr,"%>%")
 importFrom(tibble,tibble)
