Update cohen_f2 to accept either direct R2 or lm() models

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ export(generate_timedata_sequence)
 export(is.timefitteR_Param_List)
 export(new_timefitteR_Data_Model)
 export(timefitteR_Param_List)
+export(timefitteR_coerce_x_numeric)
 importFrom(magrittr,"%>%")
 importFrom(tibble,tibble)
